# relay-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml  install.sh  relay.toml.example
.github/workflows/: check.yml  release.yml
crates/master/: Cargo.toml  build.rs
crates/master/migrations/: 0001_v1_init.sql  0002_v1_settings.sql
crates/master/src/: admin.rs  ca.rs  db.rs  main.rs  reconciler.rs  service.rs  session.rs  token.rs
crates/master/src/panel/: assets.rs  auth.rs  discourse.rs  mod.rs  server.rs  settings.rs
crates/node/: Cargo.toml
crates/node/src/: apply.rs  cert.rs  main.rs  state.rs  sync.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: relay.proto
crates/proto/src/: lib.rs
panel/: index.html  package.json  tailwind.config.js  tsconfig.json
panel/scripts/: build.ts  dev.ts
panel/src/: App.tsx  main.tsx
panel/src/components/: AddBlockDialog.tsx  AddForwardDialog.tsx  AddNodeDialog.tsx  AddSegmentDialog.tsx  BlockRuleTable.tsx  ConfirmDialog.tsx  DynamicIsland.tsx  EditForwardDialog.tsx  EnrollDialog.tsx  ForwardRuleTable.tsx  NavBar.tsx  NodeCard.tsx  PageShell.tsx  StatsView.tsx  V1AddSegmentDialog.tsx  V1EnrollDialog.tsx
panel/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  skeleton.tsx  switch.tsx  table.tsx  tabs.tsx
panel/src/lib/: CurrentUser.tsx  api.ts  auth.ts  types.ts  useTheme.ts  utils.ts  v1api.ts
panel/src/pages/: Dashboard.tsx  Forwards.tsx  Login.tsx  NodeDetail.tsx  Nodes.tsx  Overview.tsx  Segments.tsx  Settings.tsx  V1Nodes.tsx  V1Segments.tsx
panel/src/routes/: PrivateRoute.tsx
scripts/: install-master-v1.sh  install-master.sh  install-node-v1.sh  install-node.sh  smoke.sh  v1-smoke-m2.sh
src/: config.rs  ctl.rs  db.rs  dns_cache.rs  ip.rs  main.rs  nft.rs  node_state.rs  proxy.rs  relay_state.rs
src/panel/: assets.rs  auth.rs  discourse.rs  master.rs  mod.rs  node.rs  tls.rs
