[package]
name = "relay-rs"
version = "1.0.1"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
signal-hook = "0.3"
hickory-resolver = "0.24"
tokio = { version = "1", features = ["rt", "net", "time"] }
