[package]
name = "relay-rs"
version = "1.5.4"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
libc = "0.2"
signal-hook = "0.3"
hickory-resolver = "0.24"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "io-util", "macros", "sync"] }
