[workspace]
members = [".", "crates/proto", "crates/master", "crates/node"]

[package]
name = "relay-rs"
version = "2.0.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"
libc = "0.2"
signal-hook = "0.3"
hickory-resolver = "0.24"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "io-util", "macros", "sync"] }

# 面板
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["cors"] }
rust-embed = "8"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
mime_guess = "2"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
