[package]
name = "relay-master"
version = "2.0.1"
edition = "2024"
description = "relay-rs v1 控制面（无数据面）"
publish = false

[[bin]]
name = "relay-master"
path = "src/main.rs"

[dependencies]
relay-proto = { path = "../proto" }

tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "signal", "fs", "sync"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"

# CA 与证书
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
time = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# 基础设施
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
rand = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
x509-parser = "0.17"

# Panel HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
jsonwebtoken = "9"
hmac = "0.12"
rust-embed = { version = "8", features = ["include-exclude"] }
urlencoding = "2"
mime_guess = "2"
futures = "0.3"
