[package]
name = "relay-node"
version = "2.0.2"
edition = "2024"
description = "relay-rs v1 数据面节点"
publish = false

[[bin]]
name = "relay-node"
path = "src/main.rs"

[dependencies]
relay-proto = { path = "../proto" }

tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "signal", "fs", "sync", "io-util"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tonic = { version = "0.12", features = ["transport", "tls", "tls-roots"] }
prost = "0.13"

rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"

clap = { version = "4", features = ["derive", "env"] }

log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
base64 = "0.22"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
