[package]
name = "relay-proto"
version = "2.0.3"
edition = "2024"
description = "relay-rs v1 控制面协议生成代码（tonic + prost）"
publish = false

[dependencies]
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost", "transport", "tls", "tls-roots"] }
prost = "0.13"
sha2 = "0.10"

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
protox = "0.7"
